<resources>
    <string name="app_name">Ticket Share</string>
    <string name="e_u">Enter Username </string>
    <string name="e_ph">Enter Mobile Number </string>
    <string name="e_ad">Enter Email Address </string>
    <string name="sign_up">Sign Up</string>
    <string name="seller_activity">Seller Activity</string>
    <string name="add_tickets">Add Tickets</string>
    <string name="textview">TextView</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="DHA">Don\'t have an account ,Sign up now</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="type_your_password">Type your password</string>
    <string name="retype_password">Retype Password</string>
    <string name="seller">Sell</string>
    <string name="buyer">Buy</string>
    <string name="VMBar" />
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend OTP</string>
    <string name="account">Account</string>
    <string name="c">Call</string>
    <string name="log_out">Log Out</string>
    <string name="your_tickets">My Tickets</string>
    <string name="your_account">Account</string>
    <string-array name="MovieList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>

    <string name="title_activity_your_tickets">YourTickets</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="change_city">Change city</string>
    <string name="your_location">My Location</string>
    <string name="select_your_city">Select Your City</string>
    <string name="intial_time">00:00</string>
    <string name="enter_event_movie_name">Enter event/movie name</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="_00_00">00:00</string>
    <string name="event">Event</string>
    <string name="movie">Movie</string>
    <string name="enter_the_venue">Enter the venue</string>
    <string name="enter_the_cost">Enter the cost</string>
    <string name="name">name</string>
    <string name="select">select</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="venue">venue</string>
    <string name="cost">cost</string>
    <string name="num">num</string>
    <string name="sold">Sold</string>
    <string name="my_account">My Account</string>
    <string name="number_of_tickets_sold">Number of tickets sold : </string>
    <string name="SoldTextView">Do you want to mark the ticket sold?</string>
    <string name="DelTextView">Do you want to delete the ticket?</string>
    <string name="soldtext2">You can view your sold tickets in \'Your Tickets\'  option in your account tab.</string>
    <string name="deltext2">You can view the deleted tickets in \'Your Tickets\'  option in your account tab.</string>
</resources>
