<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/s_user"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/e_u"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/e_u"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/s_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/e_ph"
        android:background="#FFFFFF"
        android:hint="@string/e_ph"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/s_user"
        app:layout_constraintVertical_bias="0.108"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/s_eaddr"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/e_ad"
        android:background="#FFFFFF"
        android:hint="@string/e_ad"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textCursorDrawable="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/s_phone"
        app:layout_constraintVertical_bias="0.118"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/s_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/enter_password"
        android:background="#FFFFFF"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textCursorDrawable="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/s_eaddr"
        app:layout_constraintVertical_bias="0.126"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/s_rpassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/re_enter_password"
        android:background="#FFFFFF"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textCursorDrawable="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/s_password"
        app:layout_constraintVertical_bias="0.15"
        tools:targetApi="o" />

    <Button
        android:id="@+id/sign_up"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/s_rpassword"
        app:layout_constraintVertical_bias="0.327"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>