<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/login_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="@string/e_ph"
        android:background="#FFFFFF"
        android:hint="@string/e_ph"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/enter_password"
        android:background="#FFFFFF"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/login_phone_number"
        tools:layout_editor_absoluteX="0dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#FF0391"
        android:text="@string/login"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        tools:layout_editor_absoluteX="0dp"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>