<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.lerex.tr.MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:autofillHints="@string/e_u"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/e_u"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="@string/e_ph"
        android:background="#FFFFFF"
        android:hint="@string/e_ph"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/username"
        app:layout_constraintVertical_bias="0.217"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/e_add"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:autofillHints="@string/e_ad"
        android:background="#FFFFFF"
        android:hint="@string/e_ad"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textCursorDrawable="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/phone_number"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <Button
        android:id="@+id/sign_up"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="156dp"
        android:background="#FFFFFF"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/e_add"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>